# gtestproject

./: .gitignore
samples/serial_1/: sample2.cpp  sample3.c  sample3.h
samples/serial_2_c/math/: MathFunctions.c
samples/serial_2_cpp/: CMakeLists.txt  main.c
samples/serial_2_cpp/math/: MathFunctions.cc
samples/serial_3_cpp/: main.cpp  sumpow.cpp
samples/serial_3_cpp/math/: CMakeLists.txt
serial_1/: sample1.cc
serial_2_c/math/: MathFunctions.h
serial_3_c/: CMakeLists.txt  main.c  sumpow.c
serial_3_c/math/: MathFunctions.c
serial_3_cpp/: CMakeLists.txt  sumpow.hpp
testSuite/: gtest_cc_appl_x.cc  gtest_rdbi_identification_x.cc  mock_cc_appl_x.cpp  mock_cc_appl_x.hpp  mock_rbNet_x_app_func.cpp  mock_rbNet_x_app_func.hpp  mock_rdbi_identification_x.cpp  mock_rdbi_identification_x.hpp  net_sim.hpp  test_cc_appl_x.cc  test_rbNet_x_app_func.cc
